[package]
name = "gtk-examples"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>",
           "Dirk Van Haerenborgh <vhdirk@gmail.com>"]
repository = "https://github.com/sdroege/gtk-subclass"
license = "MIT/Apache-2.0"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gtk = { git = "https://github.com/gtk-rs/gtk" }
gdk = { git = "https://github.com/gtk-rs/gdk" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf" }
gio = { git = "https://github.com/gtk-rs/gio" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
pango = { git = "https://github.com/gtk-rs/pango" }

glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }

gobject-subclass = { git = "https://github.com/gtk-rs/gobject-subclass" }
gio-subclass = { git="https://github.com/gtk-rs/gobject-subclass" }
gtk-subclass = { path= "../gtk-subclass"}

[[bin]]
name = "cell-renderer-example"
path = "src/cell_renderer_example.rs"
